--- a/src/html/items.html
+++ b/src/html/items.html
@@ -10,7 +10,7 @@
 			rel="stylesheet"
 		/>
 		<link rel="stylesheet" href="reset.css" />
-		<title>Mercado Libre</title>
+		<title>Mercado Libre - Items</title>
 	</head>
 	<body>
 		<div id="root"></div>
